--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div class="container"></div>
 
-    <script src="src/index.js"></script>
+    <script src="src/index.js" defer></script>
   </body>
 </html>
