--- a/sevenday-forcast/public/index.html
+++ b/sevenday-forcast/public/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="react" />
     <link rel="icon" src="https://www.flaticon.com/free-icon/cloudy_1146869" />
-    <div>
-      <a href="https://www.freepik.com"></a>
-    </div>
     <title>Weather</title>
   </head>
   <body>
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1fByA0ZCLSYpzyNAlcVJTwIEUNDYuaIE&libraries=places"
+    ></script>
+
     <noscript></noscript>
     <div id="root"></div>
   </body>
